Notre expose sur les droits d'access en poo

--- a/ressources.html
+++ b/ressources.html
@@ -30,7 +30,7 @@
                     <a href="https://youtu.be/H0OetoieSDQ">https://youtu.be/H0OetoieSDQ</a>
                 </li>
                 <li>
-                    <a href="https://github.com/dioukoum">https://github.com/dioukoum</a>
+                    <a href="https://github.com/dioukoum/c-plus-plus">https://github.com/dioukoum/c-plus-plus</a>
                 </li>
             </ul>
             <p>
