Mise de l'expose du cours de c++

--- a/private.html
+++ b/private.html
@@ -20,7 +20,7 @@
                 <button><a href="public.html"><img src="./images/angle-gauche.svg" alt="angle-bracket" title="Page Public" width="33" height="40"></a></button>
                 <button><a href="protected.html"><img src="./images/angle-droit.svg" alt="angle-bracket" title="Page Protected" width="33" height="40"></a></button>
             </p>
-            <p style="color: #fff; font-weight: bold; font-style: italic;">&copy;CopyRight Dioukou Moussa Sissoko 2022 c++</p>
+            <p style="font-size: x-small;color: #fff; font-weight: bold; font-style: italic;">&copy;CopyRight Dioukou Moussa Sissoko 2022 c++</p>
         </div>
     </div>
 </body>
