--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     <div class="container">
         <h1>droit d'accès en <span>poo</span></h1>
         <div class="intro">
-            <p>Qu'est-ce-que la visibilité des proprétés et methodes d'un objet ?</p>
+            <p>Qu'est-ce-que la visibilité des propriétés et methodes d'un objet ?</p>
             <p>La visibilité permet de définir de quelle manière un attribut ou une methode d'un objet sera accessible dans le programme. Comme <span>Java</span>, <span>C++</span> ou <span>PHP</span> on a 3 niveaux differents de visibilité applicable aux proprietés et methodes de l'objet:</p>
             <p>Il s'agit des visibilités <span>publiques</span>, <span>privées</span> et <span>protegées</span> qui sont respectivement définies dans la classe au moyen des mots-clés <span class="access">public</span>, <span class="access">private</span> et <span class="access">protected</span>.</p>
-            <p><a href="public.html"><img src="./images/angle-droit.svg" alt="angle-bracket" title="Page Public" width="33" height="40"></a></p>
-            <p style="color: #fff; font-weight: bold; font-style: italic;z-index: -1;">&copy;CopyRight Dioukou Moussa Sissoko 2022 c++</p>
+            <!-- <p><a href="public.html"><img src="./images/angle-droit.svg" alt="angle-bracket" title="Page Public" width="33" height="40"></a></p> -->
+            <p>
+                <button><a href="accueil.html"><img src="./images/angle-gauche.svg" alt="angle-bracket" title="Page Private" width="33" height="40"></a></button>
+                <button><a href="public.html"><img src="./images/angle-droit.svg" alt="angle-bracket" title="Page ressources" width="33" height="40"></a></button>
+            </p>
+            <p style="font-size: x-small; color: #fff; font-weight: bold; font-style: italic;z-index: -1;" >&copy;CopyRight Dioukou Moussa Sissoko 2022 c++</p>
         </div>
     </div>
 </body>
