--- a/public.html
+++ b/public.html
@@ -19,7 +19,7 @@
                 <button><a href="index.html"><img src="./images/angle-gauche.svg" alt="angle-bracket" title="Page Intro" width="33" height="40"></a></button>
                 <button><a href="private.html"><img src="./images/angle-droit.svg" alt="angle-bracket" title="Page Private" width="33" height="40"></a></button>
             </p>
-            <p style="color: #fff; font-weight: bold; font-style: italic;">&copy;CopyRight Dioukou Moussa Sissoko 2022 c++</p>
+            <p style="font-size: x-small;color: #fff; font-weight: bold; font-style: italic;">&copy;CopyRight Dioukou Moussa Sissoko 2022 c++</p>
         </div>
     </div>
 </body>
